--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile
+      target: development
     image: alpesone-app
     container_name: alpesone-app
     restart: unless-stopped
@@ -34,11 +35,11 @@ services:
     image: nginx:alpine
     container_name: alpesone-nginx
     restart: unless-stopped
-    ports:
-      - "${NGINX_PORT:-80}:80"
     volumes:
       - ./:/var/www
       - ./docker/nginx:/etc/nginx/conf.d
+    ports:
+      - "80:80"
     networks:
       - alpesone-network
     depends_on:
