--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -16,7 +16,12 @@ jobs:
         run: docker build --target testing -t alpesone-app .
 
       - name: execute tests
-        run: docker run --rm alpesone-app composer test
+        run: >
+          docker run --rm
+          -e APP_ENV=testing
+          -e APP_KEY=base64:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
+          alpesone-app
+          composer test
 
       - name: notify if failed
         if: ${{ failure() }}
