--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,8 +9,8 @@ services:
     restart: unless-stopped
     working_dir: /var/www/
     volumes:
-      - .env:/var/www/.env
-      - storage:/var/www/storage
+      - ./.env:/var/www/.env
+      - ./storage:/var/www/storage
     networks:
       - alpesone-network
 
