update CI workflow

--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -49,7 +49,7 @@ jobs:
             
             git pull origin main
             
-            docker-compose up -d --build
+            docker compose -f docker-compose.prod.yml up -d --build
             docker compose exec app php artisan migrate --force
             docker compose exec app php artisan config:cache
             docker compose exec app php artisan route:cache
